# rorm

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  changelog.txt  deny.toml  dub.json  dub.selections.json
.github/qa/: fix_clippy_sarif.py  sonar_to_sarif.py
.github/workflows/: linux.yml  macos.yml  rust-clippy.yml  unittest.yml  windows.yml
docs/: README.md  mkdocs.yml  requirements.txt
docs/docs/: index.md
docs/docs/declaration/: model_declaration.md
docs/docs/developer/: guidelines.md
docs/docs/dorm/: associations.md  model_declaration.md
docs/docs/migrations/: internal_model_representation.md  makemigrations.md  migrate.md  migration_files.md  migrations.md
docs/docs/rorm/: getting_started.md  model_declaration.md  project_setup.md
dorm/: dscanner.ini  dub.json  test_read.sqlite3
dorm/build-models/: dub.sdl
dorm/build-models/source/: _dorm_dummy.d
dorm/integration-tests/: .gitignore  run.sh
dorm/integration-tests/all-fields/: .gitignore  dub.sdl  dub.selections.json  run.sh
dorm/integration-tests/all-fields/source/: app.d  models.d
dorm/integration-tests/inserts/: .gitignore  dub.sdl  run.sh
dorm/integration-tests/inserts/source/: app.d  models.d
dorm/integration-tests/one-to-many/: .gitignore  dub.sdl  dub.selections.json  run.sh
dorm/integration-tests/one-to-many/source/: app.d  (+1 more)
dorm/source/: app.d
dorm/source/dorm/: annotations.d  design.d  model.d
dorm/testapp/: .gitignore  README.md  dub.sdl
dorm/testapp/source/: app.d  models.d
fancy-const/: Cargo.toml
fancy-const/src/: functions.rs
rorm/: Cargo.toml  README.md  cbindgen.toml
rorm-macro/: Cargo.toml
rorm-macro/src/: annotations.rs  derive.rs  lib.rs  rename_linkme.rs  utils.rs
rorm-macro/src/analyze/: mod.rs  model.rs
rorm-macro/src/generate/: db_enum.rs  mod.rs  model.rs  patch.rs
rorm-macro/src/parse/: annotations.rs  db_enum.rs  mod.rs  model.rs  patch.rs
rorm-macro/src/trait_impls/: mod.rs
rorm-sample/: Cargo.toml  README.md  example-config.toml  mysql.toml
rorm-sample/migrations/: 0001_initial.toml  0002_new_car.toml  0007_created_forum.toml  0008_altered_foreign_models.toml
rorm-sample/src/: main.rs  operations.rs
rorm-sample/src/forum/: models.rs  queries.rs
rorm-sample/src/operations/: prepared_statements.rs
rorm-workspace/: Cargo.toml
rorm-workspace/rorm-common/: Cargo.toml
rorm-workspace/rorm-common/src/: imr.rs
rorm/drorm-cli/: Cargo.toml
rorm/drorm-cli/src/: declaration.rs  main.rs
rorm/drorm-cli/src/make_migrations/: mod.rs
rorm/drorm-cli/src/migrate/: mod.rs  sql_builder.rs
rorm/drorm-cli/src/utils/: migrations.rs
rorm/rorm/: Cargo.toml
rorm/rorm-cli/: Cargo.toml  README.md
rorm/rorm-cli/src/: main.rs
rorm/rorm-cli/src/linter/: mod.rs
rorm/rorm-cli/src/make_migrations/: mod.rs
rorm/rorm-cli/src/migrate/: config.rs  mod.rs  sql_builder.rs
rorm/rorm-cli/src/squash_migrations/: mod.rs
rorm/rorm-cli/src/utils/: bind.rs  migrations.rs  mod.rs  re.rs
rorm/rorm-common/: Cargo.toml
rorm/rorm-common/src/: imr.rs  lib.rs
rorm/rorm-db/: Cargo.toml
rorm/rorm-db/src/: database.rs  database_dummy.rs  database_sqlx.rs  error.rs  lib.rs  result.rs  row.rs  row_dummy.rs  row_sqlx.rs  transaction.rs  utils.rs
rorm/rorm-declaration/: Cargo.toml
rorm/rorm-declaration/src/: config.rs  hmr.rs  imr.rs  lib.rs  lints.rs  migration.rs  model.rs
rorm/rorm-lib/: Cargo.toml  README.md
rorm/rorm-lib/src/: errors.rs  lib.rs  representations.rs  utils.rs
rorm/rorm-macro/: Cargo.toml
rorm/rorm-macro/src/: annotations.rs  args.rs  derive.rs  errors.rs  impl_anno_builder.rs  lib.rs  query.rs  rename_linkme.rs  utils.rs
rorm/rorm-macro/src/trait_impls/: mod.rs
rorm/rorm-sample/: Cargo.toml  build.sh  mysql.toml  postgres.toml  sqlite.toml
rorm/rorm-sample/migrations/: 0001_initial.toml  0003_add_birthday.toml  0004_change_birthday.toml  0005_new_counter.toml  0006_use_birthday_instead_of_age.toml  0007_created_forum.toml
rorm/rorm-sample/src/: main.rs  operations.rs
rorm/rorm-sample/src/forum/: mod.rs  models.rs
rorm/rorm-sample/src/operations/: prepared_statements.rs
rorm/rorm-sql/: Cargo.toml  README.md
rorm/rorm-sql/src/: alter_table.rs  conditional.rs  create_column.rs  create_index.rs  create_table.rs  create_trigger.rs  delete.rs  drop_table.rs  error.rs  imr.rs  insert.rs  join_table.rs  lib.rs  limit_clause.rs  on_conflict.rs  ordering.rs  postgres.rs  select.rs  select_column.rs  sqlite.rs  transaction.rs  update.rs  value.rs
rorm/rorm-sql/src/db_specific/: mod.rs  postgres.rs
rorm/rorm/src/: id.rs  lib.rs  model_def.rs
rorm/src/: annotation_builder.rs  annotations.rs  conditions.rs  id.rs  lib.rs  model.rs  model_def.rs  query.rs
rorm/src/conditions/: collections.rs  mod.rs
rorm/src/crud/: builder.rs  delete.rs  insert.rs  mod.rs  query.rs  update.rs
rorm/src/internal/: as_db_type.rs  field.rs  mod.rs  query_context.rs  relation_path.rs
source/: app.d
source/dorm/: annotations.d  model.d  package.d
source/dorm/declarative/: conversion.d  package.d
source/dorm/exceptions/: dorm_exceptions.d  package.d
source/dorm/migration/: declaration.d  package.d  parser.d
source/dorm/utils/: package.d
src/: aggregate.rs  annotations.rs  lib.rs  model.rs
src/conditions/: collections.rs  mod.rs
src/crud/: builder.rs  decoder.rs  delete.rs  insert.rs  mod.rs  query.rs  selectable.rs  selector.rs  update.rs
src/fields/: back_ref.rs  datetime.rs  foreign_model.rs  json.rs  mod.rs  msgpack.rs  uuid.rs
src/fields/traits/: cmp.rs  mod.rs
src/fields/types/: back_ref.rs  chrono.rs  foreign_model.rs  json.rs  max_str.rs  max_str_impl.rs  mod.rs  msgpack.rs  postgres_only.rs  std.rs  time.rs  url.rs  uuid.rs
src/internal/: array_utils.rs  as_db_type.rs  const_concat.rs  field.rs  hmr.rs  macro_impl.rs  mod.rs  patch.rs  query_context.rs  relation_path.rs
src/internal/field/: access.rs  as_db_type.rs  back_ref.rs  datetime.rs  decoder.rs  foreign_model.rs  mod.rs  modifier.rs
src/internal/hmr/: annotations.rs  db_type.rs  mod.rs
src/serde/: json.rs  mod.rs  msgpack.rs
(+15 files in other folders)
