[workspace]
members = [
	".",
	"rorm-db",
	"rorm-declaration",
	"rorm-macro",
	"rorm-sql",
]

[package]
name = "rorm"
version = "0.5.1"
edition = "2021"
repository = "https://github.com/rorm-orm/rorm"
authors = ["gammelalf", "myOmikron <git@omikron.dev>"]
categories = ["database"]
keywords = ["database", "orm", "async"]
description = "A asynchronous declarative ORM written in pure rust."
homepage = "https://rorm.rs"
documentation = "https://docs.rorm.rs"
license = "MIT"

[lib]
name = "rorm"
path = "src/lib.rs"

[dependencies]
# Abstractions for asynchronous programming.
futures = { version = "~0.3" }

# json serialization to communicate with the migrator
serde_json = { version = "~1" }
serde = { version = "~1" }

# `serde::MessagePack<T>` type
rmp-serde = { version = "~1", optional = true }

# Implement `Uuid` to be used as field
uuid = { version = "~1", optional = true }

# linker magic to create a slice containing all models defined by crates
linkme = { version = "~0.3" }

# Time and date library
chrono = { version = ">=0.4.20", default-features = false }

# Allow wrapping futures and streams
pin-project = { version = "~1" }

rorm-db = { version = "~0.8", path = "./rorm-db" }
rorm-macro = { version = "0.6.0", path = "./rorm-macro" }
rorm-declaration = { version = "~0.3", path = "./rorm-declaration" }

# rorm-cli exposes interfaces to integrate the cli as library
rorm-cli = { version = ">=0.7.3", path = "./rorm-cli", default-features = false, optional = true }

[build-dependencies]
rustc_version = "0.4.0"

[package.metadata.docs.rs]
features = ["msgpack", "uuid", "cli"]

[features]
default = [
	"rorm-db/all-driver"
]

msgpack = ["rmp-serde"]

cli = ["rorm-cli"]

sqlite = ["rorm-db/sqlite"]
mysql = ["rorm-db/mysql"]
postgres = ["rorm-db/postgres"]

tokio = ["rorm-db/tokio"]

async-std = ["rorm-db/async-std"]

[profile.release-lto]
inherits = "release"
lto = "fat"

[profile.release-debug]
inherits = "release"
debug = true
