[package]
name = "rorm-macro"
version = "0.5.0"
edition = "2021"
repository = "https://github.com/myOmikron/drorm"
authors = ["gammelalf", "myOmikron <git@omikron.dev>"]
categories = ["database"]
keywords = ["declarative", "orm", "database", "macros"]
homepage = "https://rorm.rs"
documentation = "https://docs.rorm.rs"
license = "MIT"
description = "Macro definitions for rorm."

[lib]
proc-macro = true

[dependencies]
# syn builds rust syntax trees from strings or tokenstream
syn = { version = "~1.0" }
# quote provides a macro to write rust code with template variables which then produces a tokenstream
quote = { version = "~1.0" }
# a higher level wrapper for rust's proc-macro which is used by syn and quote
proc-macro2 = { version = "~1.0" }
# for simple parsing of attributes
darling = { version = "~0.14" }

[features]
default = [
    "syn/full"
]
# requires nightly rust
unstable = []
