[package]
name = "rorm-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
rorm = { path = "..", features = ["tokio-rustls"] }

clap = { version = "~4.0", features = ["derive"] }
tokio = { version = "~1", features = ["macros"] }

anyhow = "~1.0"
chrono = "~0.4"
env_logger = "~0.9"
futures = "~0.3"
log = "~0.4"
serde = "~1.0"
toml = "~0.5"

[features]
rorm-main = []
