[workspace]
members = [
	".",
	"drorm-cli",
	"rorm-macro",
	"rorm-sql",
]

[package]
name = "rorm"
version = "0.1.0"
edition = "2021"
repository = "github.com/myOmikron/drorm"
authors = ["gammelalf", "myOmikron <git@omikron.dev>"]
categories = ["database"]
keywords = ["database", "orm", "async"]

[lib]
name = "rorm"
path = "src/lib.rs"

[dependencies]
# json serialization to communicate with the migrator
serde_json = { version = "*" }
# linker magic to create a slice containing all models defined by crates
linkme = { version = "0.3" }

rorm-macro = { version = "0.1.0", path = "./rorm-macro" }
rorm-sql = { version = "0.1.0", path = "./rorm-sql" }
