[workspace]
members = [
	".",
	"rorm-cli",
	"rorm-db",
	"rorm-declaration",
	"rorm-lib",
	"rorm-macro",
	"rorm-sql",
]

[package]
name = "rorm"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/myOmikron/drorm"
authors = ["gammelalf", "myOmikron <git@omikron.dev>"]
categories = ["database"]
keywords = ["database", "orm", "async"]
description = "A asynchronous declarative ORM written in pure rust."
homepage = "https://rorm.rs"
documentation = "https://docs.rorm.rs"
license = "MIT"

[lib]
name = "rorm"
path = "src/lib.rs"

[dependencies]
# json serialization to communicate with the migrator
serde_json = { version = "*" }
# linker magic to create a slice containing all models defined by crates
linkme = { version = "0.3" }

rorm-db = { version = "0.1.0", path = "./rorm-db" }
rorm-macro = { version = "0.1.0", path = "./rorm-macro" }
rorm-declaration = { version = "0.1.0", path = "./rorm-declaration" }

[features]
default = [
	"rorm-db/all-driver"
]

sqlite = ["rorm-db/sqlite"]
mysql = ["rorm-db/mysql"]
postgres = ["rorm-db/postgres"]

tokio-rustls = ["rorm-db/tokio-rustls"]
tokio-native-tls = ["rorm-db/tokio-native-tls"]

async-std-rustls = ["rorm-db/async-std-rustls"]
async-std-native-tls = ["rorm-db/async-std-native-tls"]

actix-rustls = ["rorm-db/actix-rustls"]
actix-native-tls = ["rorm-db/actix-native-tls"]
