[package]
name = "drorm-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal dependencies
rorm-sql = { version = "0.1", path = "../rorm-sql" }

# CLI parsing tool
clap = { version = "3.1", features = ["derive"] }

# Serialization library
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = { version = "0.5.9" }

# Generic error package
anyhow = { version = "1.0" }

# Regex
regex = { version = "1.6" }

# Lazy implementation
once_cell = { version = "1.13" }

# SQL database abstraction
sqlx = { version = "0.6.0", features = [ "runtime-tokio-native-tls", "mysql", "sqlite", "postgres", "tls" ] }

# Runtime
tokio = { version = "1.20.0", features = ["rt", "macros"]  }