[package]
name = "rorm-cli"
version = "0.1.0"
edition = "2021"
authors = ["myOmikron <git@omikron.dev>"]
repository = "https://github.com/myOmikron/drorm"
keywords = ["cli", "database", "migrator", "orm"]
categories = ["command-line-utilities", "database"]
homepage = "https://rorm.rs"
documentation = "https://docs.rorm.rs"
license = "MIT"
description = "The cli tool for managing rorm applications."

[dependencies]
# Internal dependencies
rorm-sql = { version = "0.1", path = "../rorm-sql" }
rorm-declaration = { version = "0.1", path = "../rorm-declaration" }

# CLI parsing tool
clap = { version = "~4.0" }

# Serialization library
serde = { version = "~1.0" }
serde_json = { version = "~1.0" }
toml = { version = "~0.5" }

# Generic error package
anyhow = { version = "~1.0" }

# Regex
regex = { version = "~1.6" }

# Lazy implementation
once_cell = { version = "~1.15" }

# SQL database abstraction
sqlx = { version = "~0.6" }

# Runtime
tokio = { version = "~1.21" }

# Enum simplification
strum = { version = "~0.24" }

[features]
default = [
    "sqlx/runtime-tokio-rustls",
    "sqlx/mysql",
    "sqlx/sqlite",
    "sqlx/postgres",
    "sqlx/any",
    "tokio/macros",
    "serde/derive",
    "clap/derive",
    "sqlx/chrono",
    "rorm-sql/sqlite"
]
