[package]
name = "rorm-db"
version = "0.1.0"
edition = "2021"
categories = ["database"]
keywords = ["async", "orm", "database", "orm"]
repository = "github.com/myOmikron/drorm"
authors = ["myOmikron <git@omikron.dev>"]
homepage = "https://rorm.rs"
documentation = "https://docs.rorm.rs"
license = "MIT"
description = "The inner database abstraction layer from rorm."

[lib]
name = "rorm_db"

[dependencies]
rorm-sql = { version = "0.1.0", path = "../rorm-sql" }
rorm-declaration = { version = "0.1.0", path = "../rorm-declaration" }

# Abstractions for asynchronous programming.
futures = { version = "^0.3" }

# SQL executor. Optional because it requires a runtime and a TLS implementation.
# A compile error will be thrown if no runtime is chosen.
sqlx = { version = "^0.6", optional = true }

# Error library to simplify the std::error::Error trait
thiserror = { version = "^1.0" }

# Allow self referencing structs
ouroboros = { version = "0.15" }

[dev-dependencies]
sqlx = { version = "^0.6", features = ["any"] }

[features]
default = [
    "sqlx-all-extensions",
    "all-driver"
]

all-driver = [
    "mysql",
    "postgres",
    "sqlite"
]

mysql = ["sqlx?/mysql"]
postgres = ["sqlx?/postgres"]
sqlite = ["sqlx?/sqlite"]

sqlx-all-extensions = [
    "sqlx?/uuid",
    "sqlx?/chrono",
    "sqlx?/time",
    "sqlx?/bstr",
    "sqlx?/bigdecimal",
    "sqlx?/decimal",
    "sqlx?/ipnetwork",
    "sqlx?/json",
    "sqlx?/any",
    "sqlx?/tls",
]

async-std = []
async-std-native-tls = [
    "sqlx/runtime-async-std-native-tls",
    "async-std",
]
async-std-rustls = [
    "sqlx/runtime-async-std-rustls",
    "async-std",
]

actix = []
actix-native-tls = [
    "sqlx/runtime-actix-native-tls",
    "actix"
]
actix-rustls = [
    "sqlx/runtime-actix-rustls",
    "actix"
]

tokio = []
tokio-native-tls = [
    "sqlx/runtime-tokio-native-tls",
    "tokio"
]
tokio-rustls = [
    "sqlx/runtime-tokio-rustls",
    "tokio"
]
