[package]
name = "rorm-declaration"
version = "0.1.0"
edition = "2021"
repository = "github.com/myOmikron/drorm"
categories = ["database"]
authors = ["myOmikron <git@omikron.dev>", "gammelalf"]
keywords = ["database", "declarative"]

[lib]
path = "src/lib.rs"

[dependencies]
# Implements Eq and Order types for f64
ordered-float = { version = "3.0", features = ["serde"] }

# serde defines (de-)serialization behaviour for structs and enums
serde = { version = "1.0", features = ["derive"] }
