[package]
name = "rorm-declaration"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/myOmikron/drorm"
categories = ["database"]
authors = ["myOmikron <git@omikron.dev>", "gammelalf"]
keywords = ["database", "declarative"]
homepage = "https://rorm.rs"
documentation = "https://docs.rorm.rs"
license = "MIT"
description = "The base defintion layer all rorm crates rely on."

[lib]
path = "src/lib.rs"

[dependencies]
# Implements Eq and Order types for f64
ordered-float = { version = "3.0" }

# serde defines (de-)serialization behaviour for structs and enums
serde = { version = "1.0" }

[features]
default = [
    "serde/derive",
    "ordered-float/serde"
]