[package]
name = "rorm-lib"
version = "0.1.0"
edition = "2021"
keywords = ["database", "library"]
authors = ["myOmikron <git@omikron.dev>"]
categories = ["database", "development-tools.categories.ffi"]
repository = "https://github.com/myOmikron/drorm"
homepage = "https://rorm.rs"
documentation = "https://docs.rorm.rs"
license = "MIT"
description = "The FFI bindings to C."

[lib]
name = "rorm"
crate-type = ["staticlib", "cdylib"]

[dependencies]
rorm-db = { version = "0.1.0", path = "../rorm-db" }

# Runtime to execute the async context in
tokio = { version = "1.20" }

# Async wrapper
futures = { version = "^0.3" }

[features]
default = [
    "rorm-db/tokio-rustls",
    "tokio/rt-multi-thread",
]
