[package]
name = "rorm-macro"
version = "0.1.0"
edition = "2021"
repository = "github.com/myOmikron/drorm"
authors = ["gammelalf", "myOmikron <git@omikron.dev>"]
categories = ["database"]
keywords = ["declarative", "orm", "database", "macros"]
homepage = "https://rorm.rs"
documentation = "https://docs.rorm.rs"
license = "MIT"
description = "Macro definitions for rorm."

[features]
# requires nightly rust
unstable = []

[lib]
proc-macro = true

[dependencies]
# syn builds rust syntax trees from strings or tokenstream
syn = { version = "1.0", features = ["full"] }
# quote provides a macro to write rust code with template variables which then produces a tokenstream
quote = { version = "1.0" }
# a higher level wrapper for rust's proc-macro which is used by syn and quote
proc-macro2 = { version = "1.0" }

# Dependencies for the example code in the doc
[dev-dependencies]
rorm = { version = "0.1", path = ".." }
linkme = { version = "0.3" }
