[package]
name = "rorm-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
rorm = { path = "..", features = ["tokio-rustls"] }
tokio = { version = "~1", features = ["full"] }
toml = "~0.5"
serde = "~1.0"
env_logger = "~0.9"
futures = "~0.3"
log = "~0.4"
clap = { version = "~4.0", features = ["derive"] }

[features]
rorm-main = []
