[package]
name = "rorm-sql"
version = "0.1.0"
edition = "2021"
keywords = ["database", "abstraction-layer", "sqlite", "postgres", "mysql"]
categories = ["database"]
authors = ["myOmikron <git@omikron.dev>"]
repository = "github.com/myOmikron/drorm"
homepage = "https://rorm.rs"
documentation = "https://docs.rorm.rs"
license = "MIT"
description = "The sql abstraction layer."

[dependencies]
# Error library to simplify the std::error::Error trait
thiserror = { version = "^1.0" }

rorm-declaration = { version = "0.1.0", path = "../rorm-declaration" }
