[package]
name = "rorm-sql"
version = "0.1.0"
edition = "2021"
keywords = ["database", "abstraction-layer", "sqlite", "postgres", "mysql"]
categories = ["database"]
authors = ["myOmikron <git@omikron.dev>"]
repository = "https://github.com/myOmikron/drorm"
homepage = "https://rorm.rs"
documentation = "https://docs.rorm.rs"
license = "MIT"
description = "The sql abstraction layer."

[dependencies]
# Date & time library
chrono = { version = "^0.4" }

# Error library to simplify the std::error::Error trait
thiserror = { version = "^1.0" }

# SQlite bindings for printf
libsqlite3-sys = { version = "0.24", optional = true }

rorm-declaration = { version = "0.1.0", path = "../rorm-declaration" }

[features]
sqlite = [
    "dep:libsqlite3-sys",
    "libsqlite3-sys?/bundled-sqlcipher"
]
